add simPause() in Computer Vision mode

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ xcuserdata/
 /Unity/DroneDemo/Assembly-CSharp.csproj
 /Unity/CarDemo/WrapperDllLog.txt
 /Unity/DroneDemo/WrapperDllLog.txt
+.idea/
